@@ -1,3 +1,7 @@
+Stacks 2.41 - July 5, 2019
+--------------------------
+    Feature: populations: re-implemented full sequence export for phylip format, including partitioning information.
+
 Stacks 2.4 - May 9, 2019
 ------------------------
     Feature: populations: re-implemented HZAR export.
